Add first draft of duplicates removal
